# thesis_project_fault_tolerance

./: Cargo.toml  foo.txt  serialized_checkpoints.txt
src/: channel.rs  communication_with_kafka.rs  consumer.rs  consumerProducer.rs  consumer_producer.rs  main.rs  manager.rs  mod.rs  producer.rs  rest.rs  serialization.rs  serialize.rs  shared.rs
src/general_proof_of_concept/: manager.rs  producer.rs  serialization.rs
src/old/: channel_generic_testing  channel_old_2.rs  channels_old_1.rs  main_generic_testing  main_old_1.rs
src/old/Working/: channel.rs  main.rs
